--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  phosphor_flutter: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
