--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_localizations:
+    sdk: flutter
   phosphor_flutter: ^2.1.0
 
 dev_dependencies:
