--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,11 +63,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Montserrat-Arabic
+      fonts:
+        - asset: assets/fonts/Montserrat-Arabic Light 300.otf
+        - asset: assets/fonts/Montserrat-Arabic Regular 400.otf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
