--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,19 +7,21 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  animated_theme_switcher: ^2.0.10
+  animations: ^2.0.11
+  cupertino_icons: ^1.0.8
+  day_night_switch: ^1.0.4
+  day_night_switcher: ^0.2.0+1
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.0
   flutter_svg: ^2.0.17
   phosphor_flutter: ^2.1.0
-  flutter_bloc: ^9.1.0
-  animations: ^2.0.11
 
 dev_dependencies:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
- 
 
 flutter:
   uses-material-design: true
@@ -31,7 +33,7 @@ fonts:
   - family: Montserrat-Arabic
     fonts:
       - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Thin.otf
-        weight: 200 
+        weight: 200
       - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Light.otf
         weight: 300
       - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Regular.otf
