--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ">=3.6.0 <4.0.0"
 
 dependencies:
   animated_theme_switcher: ^2.0.10
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.0
   flutter_svg: ^2.0.17
+  get_it: ^8.0.3
   phosphor_flutter: ^2.1.0
 
 dev_dependencies:
@@ -29,22 +30,13 @@ flutter:
   assets:
     - assets/images/svg/
     - assets/images/
-fonts:
-  - family: Montserrat-Arabic
-    fonts:
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Thin.otf
-        weight: 200
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Light.otf
-        weight: 300
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Regular.otf
-        weight: 400
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Medium.otf
-        weight: 500
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-SemiBold.otf
-        weight: 600
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Bold.otf
-        weight: 700
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-ExtraBold.otf
-        weight: 800
-      - asset: assets/fonts/Montserrat_Arabic_Font_Family_(Fontmirror)/Montserrat-Arabic-Black.otf
-        weight: 900
+
+  fonts:
+    - family: Montserrat-Arabic
+      fonts:
+        - asset: assets/fonts/Montserrat-Arabic Regular 400.otf
+          weight: 400
+        - asset: assets/fonts/Montserrat-Arabic Bold 700.otf
+          weight: 700
+        - asset: assets/fonts/Montserrat-Arabic Light 300.otf
+          weight: 300
