--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^2.0.17
   get_it: ^8.0.3
   phosphor_flutter: ^2.1.0
