--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^2.0.17
   phosphor_flutter: ^2.1.0
   pin_code_fields: ^8.0.1
+  youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
