--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,15 @@ dependencies:
   equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_animate: ^4.5.2
   flutter_bloc: ^9.1.0
-  get_it: ^8.0.3
-  smooth_page_indicator: ^1.2.1
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.17
+  get_it: ^8.0.3
   phosphor_flutter: ^2.1.0
   pin_code_fields: ^8.0.1
+  smooth_page_indicator: ^1.2.1
   youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
@@ -33,7 +34,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
- 
   assets:
     - assets/images/svg/
     - assets/images/icons/
