--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.17
   get_it: ^8.0.3
+  percent_indicator: ^4.2.5
   phosphor_flutter: ^2.1.0
   pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.2.1
