--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -12,6 +12,7 @@ analyzer:
     non_constant_identifier_names: ignore
     file_names: ignore
     deprecated_member_use: ignore
+    unused_import: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
