--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.17
   get_it: ^8.0.3
+  path_provider: ^2.1.5
   percent_indicator: ^4.2.5
   phosphor_flutter: ^2.1.0
   pin_code_fields: ^8.0.1
