--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ dependencies:
   animations: ^2.0.11
   audioplayers: ^6.4.0
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   day_night_switch: ^1.0.4
   day_night_switcher: ^0.2.0+1
+  dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter:
     sdk: flutter
