--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dartz: ^0.10.1
   day_night_switch: ^1.0.4
   day_night_switcher: ^0.2.0+1
+  device_info_plus: ^11.5.0
   dio: ^5.8.0+1
   equatable: ^2.0.7
   flutter:
