--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   share_plus: ^11.0.0
   smooth_page_indicator: ^1.2.1
   vibration: ^3.1.3
+  video_player: ^2.10.0
   youtube_player_flutter: ^9.1.1
 
 dev_dependencies:
