--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   screenshot: ^3.0.0
   share_plus: ^11.0.0
+  shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
   vibration: ^3.1.3
   youtube_player_flutter: ^9.1.1
